Cálculo driver y constructor standing
Cálculo de variables de constructor y drivers standing.
Análisis de valores nulos y extremos.
Análisis de correlación de variables de entrada con la salida.
Análisis de transformación de datos.

--- a/tp1_EDA.ipynb
+++ b/tp1_EDA.ipynb
@@ -55,10 +55,12 @@
    "outputs": [],
    "source": [
     "# Eliminamos las columnas que no vamos a utilizar en cada dataset\n",
-    "races.drop(['year', 'round', 'name', 'url', 'fp1_date', 'fp1_time','fp2_date', 'fp2_time','fp3_date',\n",
+    "# Ahora uso la variable year que habiamos sacado previamente\n",
+    "# Saco la variable altitud xq no tiene sentido alguno\n",
+    "races.drop(['round', 'name', 'url', 'fp1_date', 'fp1_time','fp2_date', 'fp2_time','fp3_date',\n",
     "            'fp3_time', 'quali_date', 'quali_time', 'sprint_date', 'sprint_time'], axis=1, inplace=True)\n",
     "\n",
-    "circuits.drop(['name', 'location', 'country', 'lat', 'lng', 'url'], axis=1, inplace=True)\n",
+    "circuits.drop(['name', 'location', 'country', 'lat', 'lng', 'url', 'alt'], axis=1, inplace=True)\n",
     "\n",
     "results.drop(['number', 'position', 'positionText', 'points', 'laps', 'time', 'milliseconds', 'fastestLap', \n",
     "           'fastestLapTime', 'fastestLapSpeed', 'statusId', 'rank'], axis=1, inplace=True)\n",
@@ -74,16 +76,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e447fda6",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Seteamos como índice de los dataframes la columna por la que vamos a realizar joins\n",
-    "races.set_index('raceId')\n",
-    "circuits.set_index('circuitId')\n",
-    "results.set_index('raceId')\n",
-    "driver_standings.set_index('raceId')\n",
-    "constructor_standings.set_index('raceId')\n",
-    "qualifying.set_index('raceId')"
+    "#races.set_index('raceId')\n",
+    "#circuits.set_index('circuitId')\n",
+    "#results.set_index('raceId')\n",
+    "#driver_standings.set_index('raceId')\n",
+    "#constructor_standings.set_index('raceId')\n",
+    "#qualifying.set_index('raceId')"
    ]
   },
   {
@@ -96,8 +100,7 @@
     "# Cambiamos nombres de columnas para identificarlos mejor\n",
     "qualifying.rename(columns = {'position':'q_position'}, inplace = True)\n",
     "driver_standings.rename(columns = {'points':'ds_points', 'position':'ds_position', 'wins':'ds_wins'}, inplace = True)\n",
-    "constructor_standings.rename(columns = {'points':'cs_points', 'position':'cs_position', 'wins':'cs_wins'}, inplace = True)\n",
-    "circuits.rename(columns = {'alt':'altitud'}, inplace = True)"
+    "constructor_standings.rename(columns = {'points':'cs_points', 'position':'cs_position', 'wins':'cs_wins'}, inplace = True)"
    ]
   },
   {
@@ -108,9 +111,87 @@
    "outputs": [],
    "source": [
     "full = pd.merge(results, qualifying, how='inner', on=['raceId', 'driverId', 'constructorId']).merge(\n",
-    "    driver_standings, how='inner', on=['raceId', 'driverId']).merge(\n",
-    "    constructor_standings, how='inner', on=['raceId', 'constructorId']).merge(races, how='inner', on=['raceId']).merge(\n",
+    "    races, how='inner', on=['raceId']).merge(\n",
     "    circuits, how='inner', on=['circuitId'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1830ea16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Agregar una columna \"fecha\" al dataframe driver_standings que contenga la fecha de la carrera correspondiente\n",
+    "driver_standings = pd.merge(driver_standings, races[[\"raceId\", \"date\", \"year\"]], on=\"raceId\")\n",
+    "\n",
+    "# Agregar una columna \"fecha\" al dataframe constructor_standings que contenga la fecha de la carrera correspondiente\n",
+    "constructor_standings = pd.merge(constructor_standings, races[[\"raceId\", \"date\", \"year\"]], on=\"raceId\")\n",
+    "\n",
+    "# Ordenar el dataframe driver_standings por la columna \"fecha\" y \"position\"\n",
+    "driver_standings = driver_standings.sort_values(by=[\"driverId\", \"date\"], ascending=True)\n",
+    "\n",
+    "# Ordenar el dataframe constructor_standings por la columna \"fecha\" y \"position\"\n",
+    "constructor_standings = constructor_standings.sort_values(by=[\"constructorId\", \"date\"], ascending=True)\n",
+    "\n",
+    "# Convierto campo 'date' de str a datetime\n",
+    "driver_standings['date'] = pd.to_datetime(driver_standings['date'])\n",
+    "constructor_standings['date'] = pd.to_datetime(constructor_standings['date'])\n",
+    "\n",
+    "# Ordenar los valores por fecha ascendente\n",
+    "driver_standings = driver_standings.sort_values(['driverId','date'], ascending=True)\n",
+    "constructor_standings = constructor_standings.sort_values(['constructorId','date'], ascending=True)\n",
+    "\n",
+    "# Utilizar el método shift para obtener los valores anteriores\n",
+    "driver_standings['ds_prev_points'] = driver_standings.groupby(['driverId', 'year'])['ds_points'].shift(1)\n",
+    "driver_standings['ds_prev_position'] = driver_standings.groupby(['driverId', 'year'])['ds_position'].shift(1)\n",
+    "driver_standings['ds_prev_wins'] = driver_standings.groupby(['driverId', 'year'])['ds_wins'].shift(1)\n",
+    "\n",
+    "constructor_standings['cs_prev_points'] = constructor_standings.groupby(['constructorId', 'year'])['cs_points'].shift(1)\n",
+    "constructor_standings['cs_prev_position'] = constructor_standings.groupby(['constructorId', 'year'])['cs_position'].shift(1)\n",
+    "constructor_standings['cs_prev_wins'] = constructor_standings.groupby(['constructorId', 'year'])['cs_wins'].shift(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fca28b76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver_standings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f26b6e52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76f0064e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full = pd.merge(full, driver_standings[['raceId', 'driverId', 'ds_prev_points', 'ds_prev_position', 'ds_prev_wins']], how='inner', on=['raceId', 'driverId']).merge(\n",
+    "    constructor_standings[['raceId', 'constructorId', 'cs_prev_points', 'cs_prev_position', 'cs_prev_wins']], how='inner', on=['raceId', 'constructorId'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b04ce01a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full.rename(columns = {'ds_prev_points':'ds_points','ds_prev_position':'ds_position','ds_prev_wins':'ds_wins',\n",
+    "                      'cs_prev_points':'cs_points','cs_prev_position':'cs_position','cs_prev_wins':'cs_wins'}, inplace = True)"
    ]
   },
   {
@@ -120,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full.head()"
+    "full[(full.driverId == 1) & ((full.year == 2022) | (full.year == 2023)| (full.year == 2021))].sort_values('date', ascending=True)"
    ]
   },
   {
@@ -256,13 +337,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def datetime_to_seconds(laptime: str) -> int:\n",
+    "def datetime_to_seconds(laptime: str) -> float:\n",
     "    if laptime == '\\\\N' or laptime == 'nan':\n",
-    "        return 0\n",
+    "        return np.nan\n",
     "    time_format = \"%M:%S.%f\"\n",
     "    dt = datetime.strptime(laptime, time_format)\n",
     "    seconds = dt.minute * 60 + dt.second + dt.microsecond / 1_000_000\n",
-    "    return int(seconds * 1000)"
+    "    return float(seconds * 1000)"
    ]
   },
   {
@@ -272,7 +353,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full['q1'] = full['q1'].astype(str) # verificar si hace falta esta linea\n",
+    "full['q1'] = full['q1'].astype(str)\n",
     "full['q1_ms'] = np.vectorize(datetime_to_seconds)(full['q1'])\n",
     "full.head()"
    ]
@@ -284,7 +365,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "px.histogram(full, x='q1_ms', title='title')"
+    "px.histogram(full, x='q1_ms', title='title')\n",
+    "# px.histogram(full[(full.circuitRef == 'albert_park') & (full.year == 2022)], x='q1_ms', title='title')"
    ]
   },
   {
@@ -355,11 +437,132 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "adc3f303",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "px.histogram(full, x='q3_ms', color='is_podium', title='Distribución', barmode='group', labels=['Podio','No podio'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd18a768",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full[['q1_ms', 'q2_ms', 'q3_ms']].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de325e94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sacamos columnas q1, q2 y q3 ya que utilizaremos la columna pasada a milisegundos.\n",
+    "full.drop(['q1', 'q2', 'q3'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1be0c979",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# En el dataset se indican los valores no registrados (nulos) como '\\N'. Para hacer un mejor análisis los pasamos a None o NaN\n",
+    "full['time'] = full['time'].replace('\\\\N', None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "015a7ca5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Analisis valores nulos\n",
+    "full.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1909953f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Analisis valores extremos\n",
+    "px.box(full, y='q1_ms')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9917f311",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.box(full, y='q2_ms')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c320eb51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.box(full, y='q3_ms')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d497607",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Valor extremo encontrado en los tiempos de vuelta de q1 en milisegundos\n",
+    "full[full.q1_ms > 1000000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "582e93de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Heatmap\n",
+    "# Armo un df nuevo quitando IDs\n",
+    "final = full[['grid', 'q_position', 'ds_points', 'ds_position', 'ds_wins',\n",
+    "              'cs_points', 'cs_position', 'cs_wins', 'q1_ms', 'q2_ms', 'q3_ms', 'is_podium']]\n",
+    "final.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17b84dd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.imshow(final.corr(), text_auto=True, width=800, height=800)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5087cc15",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
