Export final csv for training

--- a/tp1_EDA.ipynb
+++ b/tp1_EDA.ipynb
@@ -272,6 +272,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "af22991d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consulta para verificar que se haya realizado correctamente\n",
+    "driver_standings[(driver_standings.driverId == 1) & ((driver_standings.year == 2022) | (driver_standings.year == 2023)| (driver_standings.year == 2021))].sort_values('date', ascending=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "76f0064e",
    "metadata": {},
    "outputs": [],
@@ -933,6 +944,39 @@
     "Por ejemplo, un corredor finaliza la clasificación en primera posición (q_position) pero antes de comenzar la carrera realiza un cambio de componente superando el límite y obtiene una sanción de 5 puestos, por lo que comenzará la carrera en sexta posición (grid).\n",
     "\n",
     "También pudimos observar que en ciertas temporadas, generalmente las más antiguas, contaban con muchos más corredores que en las últimas temporadas de Formula 1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09b7851c",
+   "metadata": {},
+   "source": [
+    "#### Limpieza final del dataset para el entrenamiento\n",
+    "Realizamos la limpieza del dataset y lo exportamos en un csv para utilizarlo en el entrenamiento."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b58614e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eliminamos los IDs\n",
+    "full.drop(['resultId', 'raceId', 'driverId', 'constructorId', 'qualifyId', 'circuitId', ], axis=1, inplace=True)\n",
+    "# Ponemos la variable de salida al final del dataset\n",
+    "full = full[[c for c in full if c not in ['is_podium']] + ['is_podium']]\n",
+    "full.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66c6d5e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full.to_csv('f1_race_podiums.csv', index=False)"
    ]
   }
  ],
